Div having contentEditable and display:grid cannot be edited if it is empty. https://bugs.webkit.org/show_bug.cgi?id=141465

Reviewed by Ryosuke Niwa.

Source/WebCore:

This bug is quite similar to webkit.org/b/141218. RenderGrid should be also treated as a candidate
for visible position as like RenderFlexibleBox. The only different situation between them is
that RenderGrid has a bug setting "0px" for logicalHeight when it is empty. RenderGrid should also have
a minimum height of a single line if it is editable as well as RenderFlexibleBox does.

Test: fast/events/key-events-in-editable-gridbox.html

* dom/Position.cpp:
(WebCore::Position::isCandidate):
(WebCore::Position::isRenderedCharacter):
* rendering/RenderGrid.cpp:
(WebCore::RenderGrid::layoutGridItems):

LayoutTests:

This tests if an editable grid box can be reedited after erasing all texts in it.

* fast/events/key-events-in-editable-gridbox-expected.txt: Added.
* fast/events/key-events-in-editable-gridbox.html: Added.


Canonical link: https://commits.webkit.org/159585@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180050 268f45cc-cd09-0410-ab3c-d52691b4dbfc