Source/WebCore/dom/Position.cpp
@@ -36,6 +36,7 @@
 #include "PositionIterator.h"
 #include "RenderBlock.h"
 #include "RenderFlexibleBox.h"
+#include "RenderGrid.h"
 #include "RenderInline.h"
 #include "RenderIterator.h"
 #include "RenderLineBreak.h"
@@ -915,11 +916,11 @@ bool Position::isCandidate() const
 {
     if (isNull())
         return false;
-        
+
     RenderObject* renderer = deprecatedNode()->renderer();
     if (!renderer)
         return false;
-    
+
     if (renderer->style().visibility() != VISIBLE)
         return false;
 
@@ -936,7 +937,7 @@ bool Position::isCandidate() const
     if (m_anchorNode->hasTagName(htmlTag))
         return false;
 
-    if (is<RenderBlockFlow>(*renderer) || is<RenderFlexibleBox>(*renderer)) {
+    if (is<RenderBlockFlow>(*renderer) || is<RenderFlexibleBox>(*renderer) || is<RenderGrid>(*renderer)) {
         RenderBlock& block = downcast<RenderBlock>(*renderer);
         if (block.logicalHeight() || m_anchorNode->hasTagName(bodyTag)) {
             if (!Position::hasRenderedNonAnonymousDescendantsWithHeight(block))
@@ -953,11 +954,11 @@ bool Position::isRenderedCharacter() const
 {
     if (!is<Text>(deprecatedNode()))
         return false;
-        
+
     RenderText* renderer = downcast<Text>(*deprecatedNode()).renderer();
     if (!renderer)
         return false;
-    
+
     return renderer->containsRenderedCharacterOffset(m_offset);
 }
 
